@@ -1,97 +1,154 @@
 package com.exposer.handler;
 
-import com.exposer.exception.ExistDataException;
-import com.exposer.exception.ResourceNotFoundException;
+import com.exposer.exception.*;
 import jakarta.validation.ConstraintViolationException;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.mail.MailSendException;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.MissingServletRequestParameterException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
+import org.springframework.web.servlet.resource.NoResourceFoundException;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+
+import static com.exposer.constants.ErrorMessage.INVALID_USERNAME_PASSWORD;
+import static com.exposer.constants.ErrorMessage.ACCESS_DENIED;
 
 @RestControllerAdvice
-@RequiredArgsConstructor
 @Slf4j
 public class GlobalExceptionHandler {
 
-    private final GenericResponseHandler response;
-
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<?> handleMethodArgumentNotValid(MethodArgumentNotValidException ex) {
+    public ResponseEntity<Map<String, Object>> handleMethodArgumentNotValid(MethodArgumentNotValidException ex) {
         List<String> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(err -> err.getField() + ": " + err.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
         log.warn("Validation failed: {}", errors);
-        return response.createErrorResponse("Validation Failed!", errors, HttpStatus.BAD_REQUEST);
+        return GenericResponseHandler.createErrorResponse("Validation Failed!", errors, HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler({ConstraintViolationException.class})
-    public ResponseEntity<?> handleConstraintViolation(ConstraintViolationException ex) {
+    @ExceptionHandler(ConstraintViolationException.class)
+    public ResponseEntity<Map<String, Object>> handleConstraintViolation(ConstraintViolationException ex) {
         List<String> errors = ex.getConstraintViolations()
                 .stream()
                 .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
                 .toList();
         log.warn("Validation failed with error: {}", errors);
-        return response.createErrorResponse("Validation Failed!", errors, HttpStatus.BAD_REQUEST);
+        return GenericResponseHandler.createErrorResponse("Validation Failed!", errors, HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity<?> handleHttpMessageNotReadable(HttpMessageNotReadableException ex) {
+    public ResponseEntity<Map<String, Object>> handleHttpMessageNotReadable(HttpMessageNotReadableException ex) {
         log.warn("Missing http failed: {}", ex.getMessage());
-        return response.createErrorResponseMessage(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
-    public ResponseEntity<?> handleParamMismatchReadable(MethodArgumentTypeMismatchException ex) {
+    public ResponseEntity<Map<String, Object>> handleParamMismatchReadable(MethodArgumentTypeMismatchException ex) {
         log.warn("Mismatch http failed: {}", ex.getMessage());
-        return response.createErrorResponseMessage(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
-    public ResponseEntity<?> handleHttpMessageNotSupported(HttpRequestMethodNotSupportedException ex) {
+    public ResponseEntity<Map<String, Object>> handleHttpMessageNotSupported(HttpRequestMethodNotSupportedException ex) {
         log.warn("Missing http field: {}", ex.getMessage());
-        return response.createErrorResponseMessage(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<?> handleNotFound(ResourceNotFoundException ex) {
+    public ResponseEntity<Map<String, Object>> handleNotFound(ResourceNotFoundException ex) {
         log.warn("Resource not found: {}", ex.getMessage());
-        return response.createErrorResponseMessage(ex.getMessage(), HttpStatus.NOT_FOUND);
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.NOT_FOUND);
+    }
+
+    @ExceptionHandler(NoResourceFoundException.class)
+    public ResponseEntity<Map<String, Object>> handleNoResourceFoundException(NoResourceFoundException ex) {
+        log.warn("No Resource Found Exception : {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(ExistDataException.class)
-    public ResponseEntity<?> handleConflict(ExistDataException ex) {
+    public ResponseEntity<Map<String, Object>> handleConflict(ExistDataException ex) {
         log.warn("Data conflict: {}", ex.getMessage());
-        return response.createErrorResponseMessage(ex.getMessage(), HttpStatus.CONFLICT);
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.CONFLICT);
+    }
+
+    @ExceptionHandler(InvalidTokenException.class)
+    public ResponseEntity<Map<String, Object>> handleInvalidTokenException(InvalidTokenException ex) {
+        log.warn("Invalid Token Exception: {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.CONFLICT);
+    }
+
+    @ExceptionHandler(JwtExpiredException.class)
+    public ResponseEntity<Map<String, Object>> handleJwtExpiredException(JwtExpiredException ex) {
+        log.warn("Jwt Expired Exception: {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.CONFLICT);
+    }
+
+    @ExceptionHandler(AuthenticationException.class)
+    public ResponseEntity<Map<String, Object>> handleAuthenticationException(AuthenticationException ex) {
+        log.warn("Authentication Exception: {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.CONFLICT);
     }
 
     @ExceptionHandler(MissingServletRequestParameterException.class)
-    public ResponseEntity<?> handleMissingParameter(MissingServletRequestParameterException ex) {
+    public ResponseEntity<Map<String, Object>> handleMissingParameter(MissingServletRequestParameterException ex) {
         log.warn("Missing request parameter: {}", ex.getMessage());
-        return response.createErrorResponseMessage("Missing parameter: " + ex.getParameterName(), HttpStatus.BAD_REQUEST);
+        return GenericResponseHandler.createErrorResponseMessage("Missing parameter: " + ex.getParameterName(), HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<?> handleIllegalArgument(IllegalArgumentException ex) {
+    public ResponseEntity<Map<String, Object>> handleIllegalArgument(IllegalArgumentException ex) {
         log.warn("Illegal argument: {}", ex.getMessage());
-        return response.createErrorResponseMessage(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.BAD_REQUEST);
+    }
+
+    @ExceptionHandler(UsernameNotFoundException.class)
+    public ResponseEntity<Map<String, Object>> handleIllegalArgument(UsernameNotFoundException ex) {
+        log.warn("Username Not Found Exception : {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.NOT_FOUND);
+    }
+
+    @ExceptionHandler(BadCredentialsException.class)
+    public ResponseEntity<Map<String, Object>> handleIllegalArgument(BadCredentialsException ex) {
+        log.warn("Bad Credential : {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(INVALID_USERNAME_PASSWORD, HttpStatus.UNAUTHORIZED);
+    }
+
+    @ExceptionHandler(NullPointerException.class)
+    public ResponseEntity<Map<String, Object>> handleNullPointerException(NullPointerException ex) {
+        log.warn("Null Pointer Exception : {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+    @ExceptionHandler(MailSendException.class)
+    public ResponseEntity<Map<String, Object>> handleMailSendException(MailSendException ex) {
+        log.warn("Mail Send Exception : {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(ex.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+    @ExceptionHandler(AccessDeniedException.class)
+    public ResponseEntity<Map<String, Object>> handleAccessDeniedException(AccessDeniedException ex) {
+        log.warn("Access Denied Exception : {}", ex.getMessage());
+        return GenericResponseHandler.createErrorResponseMessage(ACCESS_DENIED, HttpStatus.FORBIDDEN);
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<?> handleAll(Exception ex) {
+    public ResponseEntity<Map<String, Object>> handleAll(Exception ex) {
         log.error("Unhandled exception: {}", ex.getMessage(), ex);
-        return response.createErrorResponseMessage("An unexpected error occurred. Please contact support.", HttpStatus.INTERNAL_SERVER_ERROR);
+        return GenericResponseHandler.createErrorResponseMessage("An unexpected error occurred. Please contact support.", HttpStatus.INTERNAL_SERVER_ERROR);
     }
 }
